# VbsEnclaveTooling

./: .editorconfig  .gitattributes  .gitignore  Directory.Build.props  Directory.Build.targets  NOTICE.md  README.md  VbsEnclaveTooling.sln  nuget.config  vcpkg-configuration.json  vcpkg.json
SampleApps/Tls/Rust/RustlsFeasibility/: Build-RustlsFeasibility.ps1  Cargo.toml  README.md
SampleApps/Tls/Rust/RustlsFeasibility/src/: bcrypt_provider.rs  lib.rs  tls_driver.rs
rust/: Cargo.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/crates/libs/edlcodegen-core/: Cargo.toml
rust/crates/libs/edlcodegen-core/src/: edl_core_ffi.rs  edl_core_types.rs  flatbuffer_support.rs  heap_pointer.rs  helpers.rs  lib.rs
rust/crates/libs/edlcodegen-enclave/: Cargo.toml
rust/crates/libs/edlcodegen-enclave/src/: enclave_ffi.rs  enclave_global_allocator.rs  enclave_helpers.rs  lib.rs  memory_helpers.rs  vtl0_pointers.rs  win_enclave_bindings.rs
rust/crates/libs/edlcodegen-host/src/: host_ffi.rs  host_helpers.rs  lib.rs  win_host_bindings.rs
rust/crates/libs/edlcodegen-macros/: Cargo.toml
rust/crates/libs/edlcodegen-macros/src/: derive_enum.rs  derive_struct.rs  lib.rs  utils.rs
rust/crates/libs/edlcodegen-tools/: Cargo.toml  build.rs
rust/crates/libs/edlcodegen-tools/src/: lib.rs
rust/crates/samples/helloworld/: Cargo.toml  README.md  generate_and_build_crates.ps1  test.edl
rust/crates/samples/helloworld/enclave/: Cargo.toml  build.rs
rust/crates/samples/helloworld/enclave/.cargo/: config.toml
rust/crates/samples/helloworld/enclave/src/: edl_impls.rs  enclave_constants.rs  lib.rs
rust/crates/samples/helloworld/host/: Cargo.toml
rust/crates/samples/helloworld/host/src/: container.rs  edl_impls.rs  enclave_api_ffi.rs  main.rs
rust/crates/scripts/: get_codegen_executable.ps1  invoke_cargo_build.ps1  sign-enclave.ps1
rust/crates/tests/edlcodegen/: Cargo.toml  build.rs
rust/crates/tests/edlcodegen-core/: Cargo.toml  build.rs
rust/crates/tests/edlcodegen-core/tests/: convert_types.rs  flatbuffer_test_schema.fbs
rust/crates/tests/edlcodegen/tests/: core_crate.rs  enclave_crate.rs  host_crate.rs
rust/crates/tests/edlcodegen/tests/common/: mod.rs  test_helpers.rs  test_types.rs
rust/crates/tests/edlcodegen/tests/flatbuffer_schemas/: edl_types_gen.fbs  flatbuffer_test_schema.fbs
rust/crates/tests/edlcodegen/tests/mocks/: mock_functions.rs  mod.rs
rust/edlcodegen/: Cargo.toml
rust/edlcodegen/crates/libs/edlcodegen-core/: Cargo.toml
rust/edlcodegen/crates/libs/edlcodegen-core/src/: edl_core_ffi.rs  edl_core_types.rs  helpers.rs  lib.rs
rust/edlcodegen/crates/libs/edlcodegen-enclave/: Cargo.toml
rust/edlcodegen/crates/libs/edlcodegen-enclave/src/: lib.rs
rust/edlcodegen/crates/libs/edlcodegen-host/: Cargo.toml
rust/edlcodegen/crates/libs/edlcodegen-host/src/: host_ffi.rs  lib.rs
rust/edlcodegen/crates/libs/edlcodegen-macros/: Cargo.toml
rust/edlcodegen/crates/libs/edlcodegen-macros/src/: derive_enum.rs  derive_struct.rs  utils.rs
rust/edlcodegen/crates/libs/edlcodegen-tools/: Cargo.toml
rust/edlcodegen/crates/samples/helloworld/: Cargo.toml  generate_and_build_crates.ps1
rust/edlcodegen/crates/samples/helloworld/enclave/: Cargo.toml  build.rs
rust/edlcodegen/crates/samples/helloworld/enclave/src/: edl_impls.rs  lib.rs
rust/edlcodegen/crates/samples/helloworld/host/: Cargo.toml
rust/edlcodegen/crates/samples/helloworld/host/src/: container.rs  edl_impls.rs  enclave_api_ffi.rs  main.rs
rust/edlcodegen/crates/tests/edlcodegen/: Cargo.toml
rust/edlcodegen/crates/tests/edlcodegen/tests/: core_crate.rs
rust/edlcodegen/crates/tests/edlcodegen/tests/common/: test_types.rs
rust/scripts/: generate_codegen_crates.ps1  get_codegen_executable.ps1  get_common_paths.ps1  invoke_rustfmt_workspace.ps1  sign-enclave.ps1
rust/sdk/: Cargo.toml  build.ps1  generate_and_build_crates.ps1  generate_codegen_for_workspace.ps1
rust/sdk/crates/: etw.md  readme.md
rust/sdk/crates/libs/: userboundkey.edl
rust/sdk/crates/libs/edl/: veil_abi.edl
rust/sdk/crates/libs/edl/sdk/: sdk.edl  tracelogging.edl
rust/sdk/crates/libs/sdk-enclave/: Cargo.toml
rust/sdk/crates/libs/sdk-enclave/src/: etw.rs  lib.rs
rust/sdk/crates/libs/sdk-enclave/src/common/: crypto.rs  mod.rs  sdk_impls.rs  utils.rs
rust/sdk/crates/libs/sdk-enclave/src/userboundkey/: crypto.rs  mod.rs  types.rs  utils.rs
rust/sdk/crates/libs/sdk-host/: Cargo.toml
rust/sdk/crates/libs/sdk-host/src/: enclave.rs  etw.rs  lib.rs
rust/sdk/crates/libs/sdk-host/src/common/: mod.rs  sdk_impls.rs
rust/sdk/crates/libs/sdk-host/src/userboundkey/: mod.rs  types.rs
rust/sdk/crates/libs/userboundkey-kcm/: Cargo.toml  build.rs  readme.md
rust/sdk/crates/libs/userboundkey-kcm/src/: bindings.rs  lib.rs
rust/sdk/crates/libs/windows-enclave/: Cargo.toml  build.rs
rust/sdk/crates/libs/windows-enclave/apis/: bcrypt.txt  veinterop.txt  vertdll.txt
rust/sdk/crates/libs/windows-enclave/src/: lib.rs
rust/sdk/crates/libs/windows-enclave/src/manual_bindings/: bcrypt.rs  mod.rs  veinterop.rs  vertdll.rs
rust/sdk/crates/samples/userboundkey/: Cargo.toml  README.md  build.ps1  userboundkey_sample.edl
rust/sdk/crates/samples/userboundkey/enclave/: Cargo.toml  build.rs
rust/sdk/crates/samples/userboundkey/enclave/src/: edl_impls.rs  lib.rs
rust/sdk/crates/samples/userboundkey/host/: Cargo.toml
rust/sdk/crates/samples/userboundkey/host/src/: edl_impls.rs  main.rs
rust/sdk/crates/tests/sdk/: Cargo.toml
rust/sdk/crates/tests/sdk/tests/: host.rs
src/ToolingSharedLibrary/CurrentCodeGenerationState/Rust/Enclave/code_gen_test_gen/: Cargo.toml  build.rs
src/ToolingSharedLibrary/CurrentCodeGenerationState/Rust/Enclave/code_gen_test_gen/src/: lib.rs
src/ToolingSharedLibrary/CurrentCodeGenerationState/Rust/Enclave/code_gen_test_gen/src/abi/: abi_types.rs  definitions.rs  fb_support.rs  mod.rs
src/ToolingSharedLibrary/CurrentCodeGenerationState/Rust/HostApp/code_gen_test_gen/: Cargo.toml
src/ToolingSharedLibrary/CurrentCodeGenerationState/Rust/HostApp/code_gen_test_gen/src/: lib.rs
(+681 files in other folders)
