[workspace]
resolver = "3"
members = [
    "crates/libs/sdk-enclave",
    "crates/libs/sdk-host",
    "crates/libs/sdk-enclave/generated/veil_abi_gen",
    "crates/libs/sdk-host/generated/veil_abi_gen",
    "crates/libs/userboundkey-kcm",
    "crates/tests/sdk",
    "crates/libs/windows-enclave",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
regex = "1.11"
spin = "0.10.0"
userboundkey-kcm = { version = "0.1.0", path = "crates/libs/userboundkey-kcm" }
vbsenclave-sdk-enclave = { version = "0.1.0", path = "crates/libs/sdk-enclave" }
vbsenclave-sdk-host = { version = "0.1.0", path = "crates/libs/sdk-host" }
windows = "0.62.2"
windows-bindgen = "0.66.0"
windows-enclave = { version = "0.1.0", path = "crates/libs/windows-enclave" }
windows-core = "0.62.2"
windows-future = "0.3.2"
windows-link = "0.2.1"
