[workspace]
resolver = "3"
members = [
    "crates/libs/sdk-enclave",
    "crates/libs/sdk-host",
    "crates/libs/sdk-enclave/generated/userboundkey_gen",
    "crates/libs/sdk-host/generated/userboundkey_gen",
    "crates/libs/userboundkey-kcm",
    "crates/tests/sdk",
    "crates/libs/windows-enclave",
    # Sample crates
    "crates/samples/userboundkey/enclave",
    "crates/samples/userboundkey/host",
    "crates/samples/userboundkey/enclave/generated/userboundkey_sample_gen",
    "crates/samples/userboundkey/host/generated/userboundkey_sample_gen",
]

[workspace.package]
edition = "2024"

# Enclaves require panic=abort since they are no_std cdylib
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
edlcodegen-tools = { git = "https://github.com/microsoft/VbsEnclaveTooling" }
regex = "1.11"
spin = "0.10.0"
userboundkey-kcm = { version = "0.1.0", path = "crates/libs/userboundkey-kcm" }
vbsenclave-sdk-enclave = { version = "0.1.0", path = "crates/libs/sdk-enclave" }
vbsenclave-sdk-host = { version = "0.1.0", path = "crates/libs/sdk-host" }
widestring = { version = "1.1", default-features = false, features = ["alloc"] }
windows = "0.62.2"
windows-bindgen = "0.66.0"
windows-enclave = { version = "0.1.0", path = "crates/libs/windows-enclave" }
windows-core = "0.62.2"
windows-future = "0.3.2"
windows-link = "0.2.1"
