[package]
name = "edlcodegen-core"
version = "0.1.0"
edition =  { workspace = true }

[lib]
crate-type = ["rlib"]

[build-dependencies]
edlcodegen-tools = { workspace = true }

[dependencies]
edlcodegen-macros = { workspace = true }
flatbuffers = { workspace = true }
windows-result = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_System"] }
