[package]
name = "edlcodegen-core"
version = "0.1.0"
edition =  { workspace = true }
license = "MIT"
keywords = ["vbs", "vbs-enclave", "vbs-enclave-codegen", "enclave"]
repository = "https://github.com/microsoft/VbsEnclaveTooling"
categories = ["os", "no-std"]
description = "Internal core types and utilities shared by edlcodegen host and enclave support crates"

[lib]
crate-type = ["rlib"]

[build-dependencies]
edlcodegen-tools = { workspace = true }

[dependencies]
edlcodegen-macros = { workspace = true }
flatbuffers = { workspace = true }
widestring = { workspace = true }
