[package]
name = "edlcodegen-tools"
version = "0.1.0"
edition =  { workspace = true }
license = "MIT"
keywords = ["vbs", "vbs-enclave", "vbs-enclave-codegen", "enclave"]
categories = ["os"]
repository = "https://github.com/microsoft/VbsEnclaveTooling"
description = "Command-line tooling for generating Rust crates from EDL files, including the edlcodegen executable"

[dependencies]
winreg = "0.55.0"