[package]
name = "edlcodegen"
version = "0.0.0"
edition.workspace = true
publish = false
license = "MIT"
repository = "https://github.com/microsoft/VbsEnclaveTooling"
description = "Internal test crate for edlcodegen tooling"

[lib]
doc = false
doctest = false

[build-dependencies]
edlcodegen-tools = { workspace = true }

[dependencies]
edlcodegen-core = { workspace = true }
edlcodegen-enclave = { workspace = true, features = ["mock_functions"] }
edlcodegen-host = { workspace = true, features = ["mock_functions"] }
flatbuffers = { workspace = true }
windows = { workspace = true, features = ["Win32_System"] }