[package]
name = "vbsenclave-sdk-enclave"
version = "0.1.0"
edition =  { workspace = true }

[dependencies]
sdk_enclave_gen = { path = "./generated/sdk_gen" }
spin = { workspace = true }
tracelogging = { workspace = true, features = ["etw", "kernel_mode"] }
uuid = { workspace = true, default-features = false, features = [ "v4"] }
widestring = { workspace = true }
windows-enclave = {workspace = true }

