[package]
name = "vbsenclave-sdk-host"
version = "0.1.0"
edition.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Etw",
    "Security_Credentials",
    "Security_Cryptography",
    "Security_Cryptography_Certificates"
]

[dependencies]
userboundkey-kcm = { workspace = true }
veil_abi_host_gen = { path = "./generated/veil_abi_gen" }