[package]
name = "vbsenclave-sdk-host"
version = "0.1.0"
edition.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Security_Credentials",
    "Security_Cryptography",
    "Storage_Streams"
]

[dependencies]
spin = { workspace = true }
userboundkey-kcm = { workspace = true }
userboundkey_host_gen = { path = "./generated/userboundkey_gen" }
widestring = { workspace = true }
windows-core = { workspace = true }
windows-future = { workspace = true }