[package]
name = "vbsenclave-sdk-host"
version = "0.1.0"
edition.workspace = true
license = "MIT"
keywords = ["vbs", "vbs-enclave", "vbs-enclave-sdk", "enclave"]
repository = "https://github.com/microsoft/VbsEnclaveTooling"
categories = ["os"]
description = "Host-side Rust SDK for interacting with Windows VBS enclaves"

[dependencies.windows]
workspace = true
features = [
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Security_Credentials",
    "Security_Cryptography",
    "Storage_Streams"
]

[dependencies]
vbsenclave_sdk_host_gen = { workspace = true }
spin = { workspace = true }
userboundkey-kcm = { workspace = true }
uuid = {version = "1.19.0", default-features = false }
widestring = { workspace = true }
windows-core = { workspace = true }
windows-future = { workspace = true }