[package]
name = "windows-enclave"
version = "0.1.0"
edition.workspace = true
license = "MIT"
keywords = ["vbs", "vbs-enclave", "vbs-enclave-sdk", "enclave"]
repository = "https://github.com/microsoft/VbsEnclaveTooling"
categories = ["os"]
description = "Low-level FFI bindings for Windows APIs exposed to VBS enclaves"

[build-dependencies]
windows-bindgen = { workspace = true }
regex = { workspace = true }

[dependencies]
windows-link = { workspace = true }