[package]
name = "code_gen_test_enclave_gen"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
doc = false
doctest = false
test = false

[build-dependencies]
edlcodegen-tools = { git = "https://github.com/microsoft/VbsEnclaveTooling" }

[dependencies]
edlcodegen-enclave = { git = "https://github.com/microsoft/VbsEnclaveTooling" }
flatbuffers = { version = "25.9.23", default-features = false }
widestring = { version = "1.2.1", default-features = false, features = ["alloc"] }
