[package]
name = "code_gen_test_host_gen"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
doc = false
doctest = false
test = false

[build-dependencies]
edlcodegen-tools = { git = "https://github.com/microsoft/VbsEnclaveTooling" }

[dependencies]
edlcodegen-host = { git = "https://github.com/microsoft/VbsEnclaveTooling" }
windows-strings = "0.5"
flatbuffers = { version = "25.9.23", default-features = false }
widestring = { version = "1.2.1", default-features = false, features = ["alloc"] }
